# Algorythms

./: CMakeLists.txt  bleh.cpp  input.txt  output.txt  rk2.cpp  rk3  rk3.cpp
module1/: task1-3.cpp  task2-2.cpp  task3-2.cpp  task4-1.cpp  task5-1.cpp  task5-1_new  task5-1_new.cpp  task6-4  task6-4.cpp  task7-2.cpp
module2/: task1-1.cpp  task2-3.cpp  task3.cpp  task4-2.cpp  task5  task5.cpp
module3/: task2  task2.cpp  task3.cpp  task4  task4.cpp
module3/task1/: task1.cpp
module3/task1/graphs_lib/: arcgraph.hpp  igraph.hpp  listgraph.hpp  matrixgraph.hpp  setgraph.hpp
